# Open3D_Sample

./: .gitignore  pyproject.toml
src/open3d_sample/: display_bathtub.py  display_bunny.py  display_fragment.py
