[tool.poetry]
name = "open3d_sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "open3d_sample", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.12"
jupyter = "^1.0.0"
black = "^22.0.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
tqdm = "^4.64.1"
pytest-mock = "^3.10.0"
sphinx = "^7.0.1"
myst-parser = "^2.0.0"
ruff = "^0.0.278"
sphinxcontrib-mermaid = "^0.9.2"
pydantic = "^2.3.0"
taskipy = "^1.12.0"
open3d = "^0.18.0"
scikit-learn = "^1.4.1.post1"
addict = "^2.4.0"
pillow = "^10.3.0"
pandas = "^2.2.1"


[tool.taskipy.tasks]
test = "pytest -v ./../../"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.ruff]
select = ["E", "F", "D", "W", "I"]
ignore = []

line-length = 79

[tool.ruff.pydocstyle]
convention = "google"
